- [GDB] DDD saves the GDB source directory path with the current session.
- [JDB] DDD saves the JDB class path only with the current session.

DDD 3.2 also incorporates all changes from DDD 3.1.2 and later; see
below for details.


DDD 3.1.3
=========

DDD 3.1.3 fixes more minor bugs in DDD 3.1.

- Invoking DDD with a non-existing file name works.
- [HP-UX] Perl no longer exits upon start-up.
- [LessTif] DDD remains responsive when the command tool is opened.
- [Build] New configuration files from Autoconf 2.13.


DDD 3.1.2
=========

DDD 3.1.2 fixes more minor bugs in DDD 3.1, most of them related to Perl:

- Show/Hide works properly with deeply nested substructures.
- Struct members whose name starts with 'END' are properly handled.
- Starting DDD with `no command tool' set in `~/.ddd/init' works.
- Console input after `print FUNCTION()' is passed to FUNCTION.
- [Perl] Arguments of `Program->Run' are processed correctly.
- [Perl] You can redirect I/O in arguments of `Program->Run'.
- [Perl] The separate execution window can now be used with Perl.
- [Perl] DDD handles class prefixes when displaying variables.
- [Perl] The backtrace window is updated after each command.
- [Perl] The `Convert to Hex' and `Convert to Oct' conversions work.
- [Perl] Refreshing the graph via `Data->Refresh Graph' works.
- [Perl] Changing, saving and restoring various Perl settings works.
- [Java] DDD uses $CLASSPATH to lookup Java classes on start-up.
- [DBX] DDD supports execution positions as reported by AIX DBX.
- [DBX] The registers window is updated after each command.
- [Build] The splash screen works with C++ compilers other than GCC.

There are no new features in DDD 3.1.2.  You don't need to upgrade to
DDD 3.1.2 unless you use Perl or suffer from one of these bugs.


DDD 3.1.1
=========

DDD 3.1.1 fixes a number of minor bugs in DDD 3.1:

- Empty status displays are handled properly.
- Using a remote GDB, only one execution window is launched.